Updates to try and handle different get responses

--- a/client/client.html
+++ b/client/client.html
@@ -46,6 +46,7 @@
       }
 
       parseJSON(xhr, content);
+      //error in parsing
     };
 
     const sendPost = (e, nameForm) => {
@@ -71,10 +72,37 @@
       return false;
     };
 
+    const handleGet = (e, userForm) => {
+      const userAction = userForm.getAttribute('action');
+      const userMethod = userForm.getAttribute('method');
+
+      const urlField = userForm.querySelector('#urlField');
+      const methodField = userForm.querySelector('#methodSelect');
+
+      const xhr = new XMLHttpRequest();
+      xhr.open(userMethod, userAction);
+
+      xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+      xhr.setRequestHeader('Accept', 'application/json');
+
+      xhr.onload = () => handleResponse(xhr);
+
+      const formData = `url=${urlField.value}&method=${methodField.value}`;
+
+      xhr.send(formData);
+
+      e.preventDefault();
+      return false;
+    };
+
     const init = () => {
       const nameForm = document.querySelector('#nameForm');
       const addUser = (e) => sendPost(e, nameForm);
       nameForm.addEventListener('submit', addUser);
+
+      const userForm = document.querySelector('#userForm');
+      const getUsers = (e) => handleGet(e, userForm);
+      userForm.addEventListener('submit', getUsers);
     };
 
     window.onload = init;
@@ -99,7 +127,7 @@
         <option value="get">GET</option>
         <option value="head">HEAD</option>
       </select>
-      <input type="submit" value="Get User" />
+      <input type="submit" value="Get Users" />
     </form>
   </section>
   <section id="content">
