Changes to sorting code

--- a/client/client.html
+++ b/client/client.html
@@ -59,7 +59,7 @@
           }
           content.appendChild(taskList);
 
-          console.dir(JSON.stringify(obj.tasks));
+          console.dir(JSON.stringify(obj));
         }
       }
     };
