--- a/client/client.html
+++ b/client/client.html
@@ -12,8 +12,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
     //TODO:
-    // - Sort tasks by date due
+    // - Due date sorting bug
+    // - Check server codes are working
+    //    -200, 201, 204, 400, 404, 500(if required)
+    // - HEAD support
+    // - GET with parameters
+    // - Fix for..in loops
+    // - Comment code
+    // --- Extra ---
     // - animation
+    // - Cookies/same user
     const parseJSON = (xhr, content) => {
       let removeTask;
       if (xhr.response) {
@@ -143,11 +151,9 @@
         const target = e.target;
         if(target.id === "dateCreated"){
           postOrder('POST', '/orderTasks', 0);
-          sendAjax('/getTasks', 'GET');
         }
         else{
           postOrder('POST', '/orderTasks', 1);
-          sendAjax('/getTasks', 'GET');
         }
       };
 
