--- a/client/client.html
+++ b/client/client.html
@@ -12,7 +12,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
     //TODO:
-    // - Due date sorting bug
     // - Check server codes are working
     //    -200, 201, 204, 400, 404, 500(if required)
     // - HEAD support
@@ -29,6 +28,7 @@
 
         if (obj.message) {
           console.dir(obj.message);
+          console.dir(xhr.status);
         }
 
         if (obj.tasks) {
