--- a/client/client.html
+++ b/client/client.html
@@ -12,9 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
     //TODO:
-    // - Check server codes are working
-    //    -200, 201, 204, 400, 404, 500(if required)
-    // - HEAD support
+    // - 500 code (if required)
     // - GET with parameters
     // - Fix for..in loops
     // - Comment code
