Fixed for..in loop issue

--- a/client/client.html
+++ b/client/client.html
@@ -14,7 +14,6 @@
     //TODO:
     // - 500 code (if required)
     // - GET with parameters
-    // - Fix for..in loops
     // - Comment code
     // --- Extra ---
     // - animation
@@ -74,7 +73,7 @@
           }
           content.appendChild(taskList);
 
-          console.dir(JSON.stringify(obj));
+          //console.dir(JSON.stringify(obj));
         }
       }
     };
